<resources>
	<string name="app_name">Music Colors</string>
	<string name="dark_theme">Dark Theme</string>
	<string name="primary_theme">Primary_theme Colors</string>
	<string name="light_theme">Light Theme</string>

	<string name="root_failure">Root permissions were not granted, module might not work!</string>
	<string name="root_check">Checking for Root</string>
	<string name="actionbar">Action Bar Color</string>
	<string name="statusbar">Status Bar Color</string>
	<string name="accent">Accent Color</string>
	<string name="progress_fill">Progressbar Fill</string>
	<string name="progress_bg">Progressbar BG</string>

	<string name="apply">Apply</string>
	<string name="developer">Developer</string>
	<string name="donate">Donate</string>
	<string name="libraries">Libraries</string>
</resources>
