<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
				  xmlns:app="http://schemas.android.com/apk/res-auto">

	<PreferenceCategory
		android:title="Primary Colors">

		<com.jaredrummler.android.colorpicker.ColorPreference
			android:defaultValue="@color/colorPrimary"
			android:key="PRIMARY"
			android:title="@string/actionbar"/>

		<com.jaredrummler.android.colorpicker.ColorPreference
			android:defaultValue="@color/colorPrimaryDark"
			android:key="PRIMARY_DARK"
			android:title="@string/statusbar"/>

		<com.jaredrummler.android.colorpicker.ColorPreference
			android:defaultValue="@color/colorAccent"
			android:key="PRIMARY_LIGHT"
			android:title="@string/accent"/>
	</PreferenceCategory>

	<!---->

	<PreferenceCategory
		android:title="@string/dark_theme">

		<com.jaredrummler.android.colorpicker.ColorPreference
			android:defaultValue="@color/colorPrimary"
			android:key="PROGRESS_FILL_INVERSE"
			android:title="@string/progress_fill"/>

		<com.jaredrummler.android.colorpicker.ColorPreference
			android:defaultValue="@color/colorAccent"
			android:key="PROGRESS_BG_INVERSE"
			android:title="@string/progress_bg"/>
	</PreferenceCategory>

	<!---->

	<PreferenceCategory
		android:title="White Theme">

		<com.jaredrummler.android.colorpicker.ColorPreference
			android:defaultValue="@color/colorPrimary"
			android:key="PROGRESS_FILL"
			android:title="@string/progress_fill"/>

		<com.jaredrummler.android.colorpicker.ColorPreference
			android:defaultValue="@color/colorPrimaryDark"
			android:key="PROGRESS_BG"
			android:title="@string/progress_bg"/>
	</PreferenceCategory>


</PreferenceScreen>